<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="@color/green01"
        android:gravity="center"
        android:contentDescription="@string/app_name"
        android:text="@string/widget_title"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/widget_desc"
        android:orientation="horizontal"
        android:padding="15sp">

        <TextView
            android:id="@+id/home_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:contentDescription="@string/home_team"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/score_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:contentDescription="@string/score"
            android:textColor="@color/green07"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/away_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:contentDescription="@string/away_team"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>
    </LinearLayout>
</LinearLayout>